# solana_car_hijackers

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  compose.dev.yml  package.json
ai_engine/: analyzer.py  main.py  models.py  notifications.py  pyproject.toml
ai_engine/tests/: test_models.py
anchor_program/: Anchor.toml  README.md  package.json
anchor_program/programs/vehicle_passport/: Cargo.toml
app/: .env.example  layout.tsx  package-lock.json  package.json
app/(admin)/: layout.tsx
app/(admin)/authorities/: page.tsx
app/(admin)/register/: page.tsx
app/(public)/: page.tsx
app/(writer)/: layout.tsx
app/app/: layout.tsx
app/components/: Header.tsx  RoleDashboard.tsx  VehicleView.tsx  WalletProvider.tsx
app/lib/: arweave.ts  idl.json  program-types.ts  program.ts  solana.ts
app/types/: events.ts
client/: .env.example  README.md  next.config.js  package.json  tsconfig.json
docs/: DATA_MODEL.md  PROJECT_OVERVIEW.txt  SETUP.md  VEHICLE_PASSPORT_SPEC.md
migrations/: deploy.ts
programs/vehicle_history/: Cargo.toml
programs/vehicle_history/src/: constants.rs  errors.rs  lib.rs
programs/vehicle_history/src/instructions/: initialize.rs  mint_vehicle_passport.rs  mod.rs  register_authority.rs  register_vehicle.rs  write_event.rs
programs/vehicle_history/src/state/: authority.rs  event.rs  global_config.rs  mod.rs  vehicle.rs
scripts/: seed-demo.ts  seed-roles.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  pdas.ts  types.ts
tests/: vehicle_history.ts
(+27 files in other folders)
