[package]
name = "vehicle_history"
version = "0.1.0"
description = "Solana program: NFT-based vehicle history passport"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vehicle_history"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# TODO: add mpl-token-metadata for NFT minting CPI when wiring Metaplex
# mpl-token-metadata = { version = "5.1.0", features = ["no-entrypoint"] }
# anchor-spl = "0.30.1"
